Fixed FOUC, Updated Fonts, Changed Controls Text, Quick Fix to Prevent MCBA Tooltip from Being Hidden Behind Other Icons

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans:wght@300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans:wght@400;700&display=swap');
 
 * {
   margin: 0;
@@ -13,7 +13,9 @@ html {
 }
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1.125rem;
+  line-height: 1.5rem;
   overflow: hidden;
 }
 
@@ -29,50 +31,9 @@ header {
   pointer-events: none;
 }
 
-/* Preloader */
-
-.hidden {
-  display: none;
-}
-
-.preloader {
-  background-color: #d6d2ca;
-  width: 100%;
-  height: 100vh;
-  opacity: 1;
-  position: fixed;
-  z-index: 99999;
-}
-
-.preloader-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.loading {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.loader {
-  transform: rotate(45deg);
-  transform-origin: 50%;
-  animation: loading-rotate 2s ease-in-out infinite;
-}
-
-@keyframes loading-rotate {
-  0%				{ transform: rotate(0deg); }
-  100%    	{ transform: rotate(360deg); }
-}
-
-.loading-progress {
-  color: #041676;
-  font-size: 4rem;
-  font-weight: 700;
+h2 {
+  font-size: 2rem;
+  line-height: 2.2rem;
 }
 
 /* Experience */
@@ -229,7 +190,6 @@ a:focus {
 
 .info-panel-lead {
   font-weight: 700;
-  font-size: 1.125rem;
   padding-bottom: 1.25rem;
 }
 
@@ -292,7 +252,7 @@ button {
   text-decoration: none;
   background-color: #041676;
   color: #fff;
-  font-size: 1rem;
+  font-size: 1.125rem;
   cursor: pointer;
   transition: all 0.3s;
 }
@@ -312,6 +272,7 @@ button:hover {
   text-transform: uppercase;
   color: #041676;
   font-size: 0.8rem;
+  line-height: 1.2rem;
   display: none;
   /* Prevent selection */
   -webkit-user-drag: none;
